fix home icon display

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     data-placement="bottom"
                     title="Home page"
                     ><img
-                      src="/assets/images/home.svg"
+                      src="assets/images/home.svg"
                       width="25"
                       alt="Home menu icon"
                     />
