Add main content

--- a/index.html
+++ b/index.html
@@ -70,10 +70,44 @@
         </header>
 
         <!-- Main section -->
+        <main class="text-white main-section">
+          <div class="container-fluid">
+            <div class="row overflow-auto main-section-content">
+              <div class="col-md-8"></div>
+              <div class="col-sm-12 col-md-4">
+                <h1 class="heading">
+                  Hi<span class="mx-2"
+                    ><img
+                      src="assets/images/greeting-icon.svg"
+                      width="25"
+                      alt="Waving hand emoji" /></span
+                  >, I'm Frank
+                </h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                  commodi quia magni sed cupiditate numquam deleniti impedit
+                  dolorum veritatis ipsa voluptates harum praesentium rerum,
+                  officia vitae adipisci dicta corporis sit?
+                </p>
+                <button class="view-works-button mb-5">See my works</button>
+                <div class="card bg-gray px-3 py-4 mb-5">
+                  <div class="card-body text-dark">
+                    This is some text within a card body.
+                  </div>
+                </div>
+                <div class="card bg-gray px-3 py-4 mb-5">
+                  <div class="card-body text-dark">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
 
         <!-- Footer section -->
         <footer class="fixed-bottom">
-          <ul class="nav">
+          <ul class="nav px-3">
             <li class="nav-item">
               <a
                 class="nav-link"
@@ -83,7 +117,7 @@
                 title="Facebook profile"
                 ><img
                   src="assets/images/facebook.svg"
-                  width="22"
+                  width="25"
                   alt="Facebook icon"
               /></a>
             </li>
@@ -96,7 +130,7 @@
                 title="LinkedIn profile"
                 ><img
                   src="assets/images/linkedin.svg"
-                  width="22"
+                  width="25"
                   alt="LinkedIn icon"
               /></a>
             </li>
@@ -109,7 +143,7 @@
                 title="Twitter profile"
                 ><img
                   src="assets/images/twitter.svg"
-                  width="22"
+                  width="25"
                   alt="Twitter icon"
               /></a>
             </li>
@@ -122,7 +156,7 @@
                 title="Instagram profile"
                 ><img
                   src="assets/images/instagram.svg"
-                  width="22"
+                  width="25"
                   alt="Instagram icon"
               /></a>
             </li>
@@ -135,7 +169,7 @@
                 title="Github profile"
                 ><img
                   src="assets/images/github.svg"
-                  width="22"
+                  width="25"
                   alt="Github icon"
               /></a>
             </li>
