Add hidden element to top main section

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <!-- Main section -->
         <main class="text-white main-section">
           <div class="container-fluid">
-            <div class="row overflow-auto main-section-content">
-              <div class="col-md-8"></div>
-              <div class="col-sm-12 col-md-4">
+            <div class="row overflow-auto main-section-content p-5">
+              <div class="col-md-9"></div>
+              <div class="col-sm-12 col-md-3">
+                <div class="hidden"></div>
                 <h1 class="heading">
                   Hi<span class="mx-2"
                     ><img
@@ -90,11 +91,6 @@
                   officia vitae adipisci dicta corporis sit?
                 </p>
                 <button class="view-works-button mb-5">See my works</button>
-                <div class="card bg-gray px-3 py-4 mb-5">
-                  <div class="card-body text-dark">
-                    This is some text within a card body.
-                  </div>
-                </div>
                 <div class="card bg-gray px-3 py-4 mb-5">
                   <div class="card-body text-dark">
                     This is some text within a card body.
