Build resume page

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Franklin Chieze - Software Engineer</title>
+    <title>Franklin Chieze - Resume</title>
     <!-- Bootstrap styles -->
     <link
       rel="stylesheet"
@@ -13,5 +13,317 @@
     />
     <link rel="stylesheet" href="assets/styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header section -->
+    <header>
+      <nav
+        class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm"
+      >
+        <a class="navbar-brand" href="index.html"
+          ><img src="assets/images/logo.svg" alt="Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <img src="assets/images/bars.svg" width="25" alt="Hamburger" />
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="index.html"
+                data-toggle="tooltip"
+                data-placement="bottom"
+                title="Home page"
+                ><img
+                  src="assets/images/home-dark.svg"
+                  width="25"
+                  alt="Home menu icon"
+                />
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link"
+                href="resume.html"
+                data-toggle="tooltip"
+                data-placement="bottom"
+                title="Resume page"
+                ><img
+                  src="assets/images/file-dark.svg"
+                  width="15"
+                  alt="Resume menu icon"
+                /><span class="sr-only">(current)</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main section -->
+
+    <main>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-12 mt-5">
+            <h3 class="text-center">
+              <img src="assets/images/line.svg" alt="Line" />
+              <span class="px-2">My Professional Experiences</span>
+              <img src="assets/images/line.svg" alt="Line" />
+            </h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <div class="d-flex align-items-center mb-2">
+              <img
+                class="mr-2"
+                src="assets/images/logo.svg"
+                width="26"
+                alt="Logo"
+              />
+              <span class="logo-text">Andela</span>
+            </div>
+            <div class="font-weight-bold address-font mb-2">Lagos, Nigeria</div>
+            <div class="timeline-font">Oct 2017 - Present</div>
+          </div>
+          <div class="col-8">
+            <div>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Provident beatae assumenda voluptate recusandae. Aspernatur illo
+              itaque ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat.\ Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
+              ipsum, dolor sit amet consectetur adipisicing elit. Provident
+              beatae assumenda voluptate recusandae. Aspernatur illo itaque
+              ratione commodi cumque odit sunt soluta sapiente? Esse modi
+              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Sequi dolor assumenda officiis
+              reprehenderit eaque, autem cupiditate molestiae inventore
+              exercitationem debitis et maxime laborum repellat ullam totam
+              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Rerum harum distinctio neque inventore maxime
+              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
+              culpa aperiam dolorem fugit minus fugiat dolor quaerat.
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer section -->
+
+    <footer class="fixed-bottom">
+      <ul class="nav px-3">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#"
+            data-toggle="tooltip"
+            data-placement="top"
+            title="Facebook profile"
+            ><img src="assets/images/fb.svg" width="25" alt="Facebook icon"
+          /></a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#"
+            data-toggle="tooltip"
+            data-placement="top"
+            title="LinkedIn profile"
+            ><img src="assets/images/ln.svg" width="25" alt="LinkedIn icon"
+          /></a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#"
+            data-toggle="tooltip"
+            data-placement="top"
+            title="Twitter profile"
+            ><img src="assets/images/tw.svg" width="25" alt="Twitter icon"
+          /></a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#"
+            data-toggle="tooltip"
+            data-placement="top"
+            title="Instagram profile"
+            ><img src="assets/images/in.svg" width="25" alt="Instagram icon"
+          /></a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#"
+            data-toggle="tooltip"
+            data-placement="top"
+            title="Github profile"
+            ><img src="assets/images/gh.svg" width="25" alt="Github icon"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
